fixed logo align on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,17 @@ body {
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .logo0 {
-    width: 135px;
-    margin-top: 9px;
-    margin-left: 33px;
-    float: left;
+    width: 100px;    
+    margin-left: 1rem;
+    
+    
   }
+
+  #navigation-menu {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }  
 
   .version-wheel {
     float: right;
@@ -619,7 +625,8 @@ body {
     height: 10vh;
     display: block;
     background-color: transparent;
-    margin-bottom: -15px;  
+    margin-bottom: -15px;
+    display: flex;  
   
     
    
@@ -797,9 +804,17 @@ body {
   /* **** */
   .logo0 {
     width: 135px;
-    margin-top: 9px;
-    margin-left: 33px;
-    float: left;
+    margin-bottom: 1rem;    
+  }
+
+  #navigation-menu {
+    display: flex;
+  }
+
+  .nav-links {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
   }
 
   .version-wheel {
